# MTS-Hack-and-Change

./: .gitignore  README.md  docker-compose.yml
backend-for-frontend/: Dockerfile  pyproject.toml
backend-for-frontend/alembic/: env.py
backend-for-frontend/scripts/: app.sh
backend-for-frontend/src/: get_service.py
backend-for-frontend/src/api/impls/: __init__.py  departements_api.py  employees_api.py  ml_searcher_api.py  org_structure_api.py
backend-for-frontend/src/api/interfaces/: __init__.py  i_departments_api.py  i_employees_api.py  i_ml_searcher_api.py  i_org_structure_api.py
backend-for-frontend/src/presentation/: app.py
backend-for-frontend/src/presentation/routers/: __init__.py  filter_employees.py  find_boss.py  find_subs.py  get_info_router.py
backend-for-frontend/src/schemas/: __init__.py  department_schema.py  employee_return_schema.py  employee_temp_schema.py  employees_filters_schema.py  filters_schema.py  on_leave_schema.py  on_sick_leave_schema.py  post_schema.py  role_schema.py
backend-for-frontend/src/services/: __init__.py  subservices_manager_service.py
client/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  index.css
departmens/: Dockerfile  pyproject.toml
departments/: pyproject.toml
departments/src/: get_service.py
docs/: db_schema.drawio
employees/: Dockerfile  pyproject.toml
ml-searcher/: Dockerfile  pyproject.toml
ml-searcher/src/config/: __init__.py  config.py
ml-searcher/src/presentation/routers/: __init__.py  get_matching_ids.py  healthcheck.py
ml-searcher/src/presentation/schemas/: models.py
ml-searcher/src/text_preprocessor/: __init__.py  main.py  models.py
nginx/: Dockerfile  nginx.conf
org-structure/: alembic.ini  pyproject.toml
(+130 files in other folders)
