[tool.poetry]
name = "backend-for-frontend"
version = "0.1.0"
description = ""
authors = ["qiisqwww <qiisqwww@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
aiohttp = "^3.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
