[tool.poetry]
name = "ml-searcher"
version = "0.1.0"
description = ""
authors = ["qiisqwww <qiisqwww@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.5"}
joblib = "^1.4.2"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
threadpoolctl = "^3.5.0"
nltk = "^3.9.1"
pymorphy3 = "^2.0.2"
uvicorn = "^0.32.1"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
